// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App color filter Test get default color filter  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c0 {
  color: #6EB2FB !important;
}

.c0 svg:first-child {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: -webkit-transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  -webkit-transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
}

.c0 svg:last-child {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1 {
  color: #F62F5E !important;
}

.c1 svg:first-child {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: -webkit-transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  -webkit-transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
}

.c1 svg:last-child {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c2 {
  color: #00D3CA !important;
}

.c2 svg:first-child {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  -webkit-transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
}

.c2 svg:last-child {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c3 {
  color: #EFFC90 !important;
}

.c3 svg:first-child {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: -webkit-transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  -webkit-transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
}

.c3 svg:last-child {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4 {
  color: #2E2E2E !important;
}

.c4 svg:first-child {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: -webkit-transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  -webkit-transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
}

.c4 svg:last-child {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

<div>
      <div>
        <span
          aria-disabled="false"
          class="MuiButtonBase-root-19 MuiIconButton-root-10 PrivateSwitchBase-root-6 MuiRadio-root-1 MuiRadio-colorPrimary-4 c0 MuiIconButton-colorPrimary-14"
          customcolor="blue"
          data-testid="color-filter-blue"
          variant="outer"
        >
          <span
            class="MuiIconButton-label-18"
          >
            <input
              class="PrivateSwitchBase-input-9"
              type="radio"
              value=""
            />
            <div
              class="PrivateRadioButtonIcon-root-22"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-25"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-25 PrivateRadioButtonIcon-layer-23"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root-166"
          />
        </span>
        <span
          aria-disabled="false"
          class="MuiButtonBase-root-52 MuiIconButton-root-43 PrivateSwitchBase-root-39 MuiRadio-root-34 MuiRadio-colorPrimary-37 c1 MuiIconButton-colorPrimary-47"
          customcolor="red"
          data-testid="color-filter-red"
          variant="outer"
        >
          <span
            class="MuiIconButton-label-51"
          >
            <input
              class="PrivateSwitchBase-input-42"
              type="radio"
              value=""
            />
            <div
              class="PrivateRadioButtonIcon-root-55"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-58"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-58 PrivateRadioButtonIcon-layer-56"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root-176"
          />
        </span>
        <span
          aria-disabled="false"
          class="MuiButtonBase-root-85 MuiIconButton-root-76 PrivateSwitchBase-root-72 MuiRadio-root-67 MuiRadio-colorPrimary-70 c2 PrivateSwitchBase-checked-73 Mui-checked MuiIconButton-colorPrimary-80"
          customcolor="green"
          data-testid="color-filter-green"
          variant="outer"
        >
          <span
            class="MuiIconButton-label-84"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input-75"
              type="radio"
              value=""
            />
            <div
              class="PrivateRadioButtonIcon-root-88 PrivateRadioButtonIcon-checked-90"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-91"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-91 PrivateRadioButtonIcon-layer-89"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root-186"
          />
        </span>
        <span
          aria-disabled="false"
          class="MuiButtonBase-root-118 MuiIconButton-root-109 PrivateSwitchBase-root-105 MuiRadio-root-100 MuiRadio-colorPrimary-103 c3 MuiIconButton-colorPrimary-113"
          customcolor="yellow"
          data-testid="color-filter-yellow"
          variant="outer"
        >
          <span
            class="MuiIconButton-label-117"
          >
            <input
              class="PrivateSwitchBase-input-108"
              type="radio"
              value=""
            />
            <div
              class="PrivateRadioButtonIcon-root-121"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-124"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-124 PrivateRadioButtonIcon-layer-122"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root-196"
          />
        </span>
        <span
          aria-disabled="false"
          class="MuiButtonBase-root-151 MuiIconButton-root-142 PrivateSwitchBase-root-138 MuiRadio-root-133 MuiRadio-colorPrimary-136 c4 MuiIconButton-colorPrimary-146"
          customcolor="black"
          data-testid="color-filter-black"
          variant="outer"
        >
          <span
            class="MuiIconButton-label-150"
          >
            <input
              class="PrivateSwitchBase-input-141"
              type="radio"
              value=""
            />
            <div
              class="PrivateRadioButtonIcon-root-154"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-157"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-157 PrivateRadioButtonIcon-layer-155"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root-206"
          />
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <span
        aria-disabled="false"
        class="MuiButtonBase-root-19 MuiIconButton-root-10 PrivateSwitchBase-root-6 MuiRadio-root-1 MuiRadio-colorPrimary-4 sc-AxjAm kZHdzU MuiIconButton-colorPrimary-14"
        customcolor="blue"
        data-testid="color-filter-blue"
        variant="outer"
      >
        <span
          class="MuiIconButton-label-18"
        >
          <input
            class="PrivateSwitchBase-input-9"
            type="radio"
            value=""
          />
          <div
            class="PrivateRadioButtonIcon-root-22"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-25"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-25 PrivateRadioButtonIcon-layer-23"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </div>
        </span>
        <span
          class="MuiTouchRipple-root-166"
        />
      </span>
      <span
        aria-disabled="false"
        class="MuiButtonBase-root-52 MuiIconButton-root-43 PrivateSwitchBase-root-39 MuiRadio-root-34 MuiRadio-colorPrimary-37 sc-AxjAm bHFEcz MuiIconButton-colorPrimary-47"
        customcolor="red"
        data-testid="color-filter-red"
        variant="outer"
      >
        <span
          class="MuiIconButton-label-51"
        >
          <input
            class="PrivateSwitchBase-input-42"
            type="radio"
            value=""
          />
          <div
            class="PrivateRadioButtonIcon-root-55"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-58"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-58 PrivateRadioButtonIcon-layer-56"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </div>
        </span>
        <span
          class="MuiTouchRipple-root-176"
        />
      </span>
      <span
        aria-disabled="false"
        class="MuiButtonBase-root-85 MuiIconButton-root-76 PrivateSwitchBase-root-72 MuiRadio-root-67 MuiRadio-colorPrimary-70 sc-AxjAm kgqFMz PrivateSwitchBase-checked-73 Mui-checked MuiIconButton-colorPrimary-80"
        customcolor="green"
        data-testid="color-filter-green"
        variant="outer"
      >
        <span
          class="MuiIconButton-label-84"
        >
          <input
            checked=""
            class="PrivateSwitchBase-input-75"
            type="radio"
            value=""
          />
          <div
            class="PrivateRadioButtonIcon-root-88 PrivateRadioButtonIcon-checked-90"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-91"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-91 PrivateRadioButtonIcon-layer-89"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </div>
        </span>
        <span
          class="MuiTouchRipple-root-186"
        />
      </span>
      <span
        aria-disabled="false"
        class="MuiButtonBase-root-118 MuiIconButton-root-109 PrivateSwitchBase-root-105 MuiRadio-root-100 MuiRadio-colorPrimary-103 sc-AxjAm kHXFTM MuiIconButton-colorPrimary-113"
        customcolor="yellow"
        data-testid="color-filter-yellow"
        variant="outer"
      >
        <span
          class="MuiIconButton-label-117"
        >
          <input
            class="PrivateSwitchBase-input-108"
            type="radio"
            value=""
          />
          <div
            class="PrivateRadioButtonIcon-root-121"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-124"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-124 PrivateRadioButtonIcon-layer-122"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </div>
        </span>
        <span
          class="MuiTouchRipple-root-196"
        />
      </span>
      <span
        aria-disabled="false"
        class="MuiButtonBase-root-151 MuiIconButton-root-142 PrivateSwitchBase-root-138 MuiRadio-root-133 MuiRadio-colorPrimary-136 sc-AxjAm kEbSPU MuiIconButton-colorPrimary-146"
        customcolor="black"
        data-testid="color-filter-black"
        variant="outer"
      >
        <span
          class="MuiIconButton-label-150"
        >
          <input
            class="PrivateSwitchBase-input-141"
            type="radio"
            value=""
          />
          <div
            class="PrivateRadioButtonIcon-root-154"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-157"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-157 PrivateRadioButtonIcon-layer-155"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </div>
        </span>
        <span
          class="MuiTouchRipple-root-206"
        />
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App color filter Test get default color filter no crash when actions with no handler  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c0 {
  color: #6EB2FB !important;
}

.c0 svg:first-child {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  -webkit-transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
}

.c0 svg:last-child {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1 {
  color: #F62F5E !important;
}

.c1 svg:first-child {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: -webkit-transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  -webkit-transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
}

.c1 svg:last-child {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c2 {
  color: #00D3CA !important;
}

.c2 svg:first-child {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: -webkit-transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  -webkit-transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
}

.c2 svg:last-child {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c3 {
  color: #EFFC90 !important;
}

.c3 svg:first-child {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: -webkit-transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  -webkit-transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
}

.c3 svg:last-child {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4 {
  color: #2E2E2E !important;
}

.c4 svg:first-child {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: -webkit-transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  -webkit-transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
}

.c4 svg:last-child {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

<div>
      <div>
        <span
          aria-disabled="false"
          class="MuiButtonBase-root-528 MuiIconButton-root-519 PrivateSwitchBase-root-515 MuiRadio-root-510 MuiRadio-colorPrimary-513 c0 PrivateSwitchBase-checked-516 Mui-checked MuiIconButton-colorPrimary-523"
          customcolor="blue"
          data-testid="color-filter-blue"
          variant="outer"
        >
          <span
            class="MuiIconButton-label-527"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input-518"
              type="radio"
              value=""
            />
            <div
              class="PrivateRadioButtonIcon-root-531 PrivateRadioButtonIcon-checked-533"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-534"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-534 PrivateRadioButtonIcon-layer-532"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root-675"
          />
        </span>
        <span
          aria-disabled="false"
          class="MuiButtonBase-root-561 MuiIconButton-root-552 PrivateSwitchBase-root-548 MuiRadio-root-543 MuiRadio-colorPrimary-546 c1 MuiIconButton-colorPrimary-556"
          customcolor="red"
          data-testid="color-filter-red"
          variant="outer"
        >
          <span
            class="MuiIconButton-label-560"
          >
            <input
              class="PrivateSwitchBase-input-551"
              type="radio"
              value=""
            />
            <div
              class="PrivateRadioButtonIcon-root-564"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-567"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-567 PrivateRadioButtonIcon-layer-565"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root-685"
          />
        </span>
        <span
          aria-disabled="false"
          class="MuiButtonBase-root-594 MuiIconButton-root-585 PrivateSwitchBase-root-581 MuiRadio-root-576 MuiRadio-colorPrimary-579 c2 MuiIconButton-colorPrimary-589"
          customcolor="green"
          data-testid="color-filter-green"
          variant="outer"
        >
          <span
            class="MuiIconButton-label-593"
          >
            <input
              class="PrivateSwitchBase-input-584"
              type="radio"
              value=""
            />
            <div
              class="PrivateRadioButtonIcon-root-597"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-600"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-600 PrivateRadioButtonIcon-layer-598"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root-695"
          />
        </span>
        <span
          aria-disabled="false"
          class="MuiButtonBase-root-627 MuiIconButton-root-618 PrivateSwitchBase-root-614 MuiRadio-root-609 MuiRadio-colorPrimary-612 c3 MuiIconButton-colorPrimary-622"
          customcolor="yellow"
          data-testid="color-filter-yellow"
          variant="outer"
        >
          <span
            class="MuiIconButton-label-626"
          >
            <input
              class="PrivateSwitchBase-input-617"
              type="radio"
              value=""
            />
            <div
              class="PrivateRadioButtonIcon-root-630"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-633"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-633 PrivateRadioButtonIcon-layer-631"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root-705"
          />
        </span>
        <span
          aria-disabled="false"
          class="MuiButtonBase-root-660 MuiIconButton-root-651 PrivateSwitchBase-root-647 MuiRadio-root-642 MuiRadio-colorPrimary-645 c4 MuiIconButton-colorPrimary-655"
          customcolor="black"
          data-testid="color-filter-black"
          variant="outer"
        >
          <span
            class="MuiIconButton-label-659"
          >
            <input
              class="PrivateSwitchBase-input-650"
              type="radio"
              value=""
            />
            <div
              class="PrivateRadioButtonIcon-root-663"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-666"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-666 PrivateRadioButtonIcon-layer-664"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root-715"
          />
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <span
        aria-disabled="false"
        class="MuiButtonBase-root-528 MuiIconButton-root-519 PrivateSwitchBase-root-515 MuiRadio-root-510 MuiRadio-colorPrimary-513 sc-AxjAm efcmVh PrivateSwitchBase-checked-516 Mui-checked MuiIconButton-colorPrimary-523"
        customcolor="blue"
        data-testid="color-filter-blue"
        variant="outer"
      >
        <span
          class="MuiIconButton-label-527"
        >
          <input
            checked=""
            class="PrivateSwitchBase-input-518"
            type="radio"
            value=""
          />
          <div
            class="PrivateRadioButtonIcon-root-531 PrivateRadioButtonIcon-checked-533"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-534"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-534 PrivateRadioButtonIcon-layer-532"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </div>
        </span>
        <span
          class="MuiTouchRipple-root-675"
        />
      </span>
      <span
        aria-disabled="false"
        class="MuiButtonBase-root-561 MuiIconButton-root-552 PrivateSwitchBase-root-548 MuiRadio-root-543 MuiRadio-colorPrimary-546 sc-AxjAm bHFEcz MuiIconButton-colorPrimary-556"
        customcolor="red"
        data-testid="color-filter-red"
        variant="outer"
      >
        <span
          class="MuiIconButton-label-560"
        >
          <input
            class="PrivateSwitchBase-input-551"
            type="radio"
            value=""
          />
          <div
            class="PrivateRadioButtonIcon-root-564"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-567"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-567 PrivateRadioButtonIcon-layer-565"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </div>
        </span>
        <span
          class="MuiTouchRipple-root-685"
        />
      </span>
      <span
        aria-disabled="false"
        class="MuiButtonBase-root-594 MuiIconButton-root-585 PrivateSwitchBase-root-581 MuiRadio-root-576 MuiRadio-colorPrimary-579 sc-AxjAm hTkEWa MuiIconButton-colorPrimary-589"
        customcolor="green"
        data-testid="color-filter-green"
        variant="outer"
      >
        <span
          class="MuiIconButton-label-593"
        >
          <input
            class="PrivateSwitchBase-input-584"
            type="radio"
            value=""
          />
          <div
            class="PrivateRadioButtonIcon-root-597"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-600"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-600 PrivateRadioButtonIcon-layer-598"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </div>
        </span>
        <span
          class="MuiTouchRipple-root-695"
        />
      </span>
      <span
        aria-disabled="false"
        class="MuiButtonBase-root-627 MuiIconButton-root-618 PrivateSwitchBase-root-614 MuiRadio-root-609 MuiRadio-colorPrimary-612 sc-AxjAm kHXFTM MuiIconButton-colorPrimary-622"
        customcolor="yellow"
        data-testid="color-filter-yellow"
        variant="outer"
      >
        <span
          class="MuiIconButton-label-626"
        >
          <input
            class="PrivateSwitchBase-input-617"
            type="radio"
            value=""
          />
          <div
            class="PrivateRadioButtonIcon-root-630"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-633"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-633 PrivateRadioButtonIcon-layer-631"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </div>
        </span>
        <span
          class="MuiTouchRipple-root-705"
        />
      </span>
      <span
        aria-disabled="false"
        class="MuiButtonBase-root-660 MuiIconButton-root-651 PrivateSwitchBase-root-647 MuiRadio-root-642 MuiRadio-colorPrimary-645 sc-AxjAm kEbSPU MuiIconButton-colorPrimary-655"
        customcolor="black"
        data-testid="color-filter-black"
        variant="outer"
      >
        <span
          class="MuiIconButton-label-659"
        >
          <input
            class="PrivateSwitchBase-input-650"
            type="radio"
            value=""
          />
          <div
            class="PrivateRadioButtonIcon-root-663"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-666"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-666 PrivateRadioButtonIcon-layer-664"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </div>
        </span>
        <span
          class="MuiTouchRipple-root-715"
        />
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App color filter Test get default color filter no params  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div />
    </div>
  </body>,
  "container": <div>
    <div />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App color filter Test get default color filter with actions  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c0 {
  color: #2E2E2E !important;
}

.c0 svg:first-child {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: -webkit-transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  -webkit-transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
}

.c0 svg:last-child {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1 {
  color: #6EB2FB !important;
}

.c1 svg:first-child {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  -webkit-transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
}

.c1 svg:last-child {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c2 {
  color: #F62F5E !important;
}

.c2 svg:first-child {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: -webkit-transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  -webkit-transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
}

.c2 svg:last-child {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c3 {
  color: #00D3CA !important;
}

.c3 svg:first-child {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: -webkit-transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  -webkit-transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
}

.c3 svg:last-child {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4 {
  color: #EFFC90 !important;
}

.c4 svg:first-child {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: -webkit-transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  -webkit-transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
  transition: transform 150ms cubic-bezier(0.4,0,1,1) 0ms;
}

.c4 svg:last-child {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

<div>
      <div>
        <label
          class="MuiFormControlLabel-root"
          data-testid="color-filter-all"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root-240 MuiIconButton-root-231 PrivateSwitchBase-root-227 MuiRadio-root-222 MuiRadio-colorPrimary-225 c0 MuiIconButton-colorPrimary-235"
            customcolor="black"
            variant="outer"
          >
            <span
              class="MuiIconButton-label-239"
            >
              <input
                class="PrivateSwitchBase-input-230"
                type="radio"
                value="All"
              />
              <div
                class="PrivateRadioButtonIcon-root-243"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-246"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-246 PrivateRadioButtonIcon-layer-244"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root-450"
            />
          </span>
          <span
            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
          >
            All
          </span>
        </label>
        <span
          aria-disabled="false"
          class="MuiButtonBase-root-303 MuiIconButton-root-294 PrivateSwitchBase-root-290 MuiRadio-root-285 MuiRadio-colorPrimary-288 c1 PrivateSwitchBase-checked-291 Mui-checked MuiIconButton-colorPrimary-298"
          customcolor="blue"
          data-testid="color-filter-blue"
          variant="outer"
        >
          <span
            class="MuiIconButton-label-302"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input-293"
              type="radio"
              value=""
            />
            <div
              class="PrivateRadioButtonIcon-root-306 PrivateRadioButtonIcon-checked-308"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-309"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-309 PrivateRadioButtonIcon-layer-307"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root-460"
          />
        </span>
        <span
          aria-disabled="false"
          class="MuiButtonBase-root-336 MuiIconButton-root-327 PrivateSwitchBase-root-323 MuiRadio-root-318 MuiRadio-colorPrimary-321 c2 MuiIconButton-colorPrimary-331"
          customcolor="red"
          data-testid="color-filter-red"
          variant="outer"
        >
          <span
            class="MuiIconButton-label-335"
          >
            <input
              class="PrivateSwitchBase-input-326"
              type="radio"
              value=""
            />
            <div
              class="PrivateRadioButtonIcon-root-339"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-342"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-342 PrivateRadioButtonIcon-layer-340"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root-470"
          />
        </span>
        <span
          aria-disabled="false"
          class="MuiButtonBase-root-369 MuiIconButton-root-360 PrivateSwitchBase-root-356 MuiRadio-root-351 MuiRadio-colorPrimary-354 c3 MuiIconButton-colorPrimary-364"
          customcolor="green"
          data-testid="color-filter-green"
          variant="outer"
        >
          <span
            class="MuiIconButton-label-368"
          >
            <input
              class="PrivateSwitchBase-input-359"
              type="radio"
              value=""
            />
            <div
              class="PrivateRadioButtonIcon-root-372"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-375"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-375 PrivateRadioButtonIcon-layer-373"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root-480"
          />
        </span>
        <span
          aria-disabled="false"
          class="MuiButtonBase-root-402 MuiIconButton-root-393 PrivateSwitchBase-root-389 MuiRadio-root-384 MuiRadio-colorPrimary-387 c4 MuiIconButton-colorPrimary-397"
          customcolor="yellow"
          data-testid="color-filter-yellow"
          variant="outer"
        >
          <span
            class="MuiIconButton-label-401"
          >
            <input
              class="PrivateSwitchBase-input-392"
              type="radio"
              value=""
            />
            <div
              class="PrivateRadioButtonIcon-root-405"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-408"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-408 PrivateRadioButtonIcon-layer-406"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root-490"
          />
        </span>
        <span
          aria-disabled="false"
          class="MuiButtonBase-root-435 MuiIconButton-root-426 PrivateSwitchBase-root-422 MuiRadio-root-417 MuiRadio-colorPrimary-420 c0 MuiIconButton-colorPrimary-430"
          customcolor="black"
          data-testid="color-filter-black"
          variant="outer"
        >
          <span
            class="MuiIconButton-label-434"
          >
            <input
              class="PrivateSwitchBase-input-425"
              type="radio"
              value=""
            />
            <div
              class="PrivateRadioButtonIcon-root-438"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-441"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-441 PrivateRadioButtonIcon-layer-439"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root-500"
          />
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <label
        class="MuiFormControlLabel-root"
        data-testid="color-filter-all"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root-240 MuiIconButton-root-231 PrivateSwitchBase-root-227 MuiRadio-root-222 MuiRadio-colorPrimary-225 sc-AxjAm kEbSPU MuiIconButton-colorPrimary-235"
          customcolor="black"
          variant="outer"
        >
          <span
            class="MuiIconButton-label-239"
          >
            <input
              class="PrivateSwitchBase-input-230"
              type="radio"
              value="All"
            />
            <div
              class="PrivateRadioButtonIcon-root-243"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-246"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-246 PrivateRadioButtonIcon-layer-244"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root-450"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          All
        </span>
      </label>
      <span
        aria-disabled="false"
        class="MuiButtonBase-root-303 MuiIconButton-root-294 PrivateSwitchBase-root-290 MuiRadio-root-285 MuiRadio-colorPrimary-288 sc-AxjAm efcmVh PrivateSwitchBase-checked-291 Mui-checked MuiIconButton-colorPrimary-298"
        customcolor="blue"
        data-testid="color-filter-blue"
        variant="outer"
      >
        <span
          class="MuiIconButton-label-302"
        >
          <input
            checked=""
            class="PrivateSwitchBase-input-293"
            type="radio"
            value=""
          />
          <div
            class="PrivateRadioButtonIcon-root-306 PrivateRadioButtonIcon-checked-308"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-309"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-309 PrivateRadioButtonIcon-layer-307"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </div>
        </span>
        <span
          class="MuiTouchRipple-root-460"
        />
      </span>
      <span
        aria-disabled="false"
        class="MuiButtonBase-root-336 MuiIconButton-root-327 PrivateSwitchBase-root-323 MuiRadio-root-318 MuiRadio-colorPrimary-321 sc-AxjAm bHFEcz MuiIconButton-colorPrimary-331"
        customcolor="red"
        data-testid="color-filter-red"
        variant="outer"
      >
        <span
          class="MuiIconButton-label-335"
        >
          <input
            class="PrivateSwitchBase-input-326"
            type="radio"
            value=""
          />
          <div
            class="PrivateRadioButtonIcon-root-339"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-342"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-342 PrivateRadioButtonIcon-layer-340"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </div>
        </span>
        <span
          class="MuiTouchRipple-root-470"
        />
      </span>
      <span
        aria-disabled="false"
        class="MuiButtonBase-root-369 MuiIconButton-root-360 PrivateSwitchBase-root-356 MuiRadio-root-351 MuiRadio-colorPrimary-354 sc-AxjAm hTkEWa MuiIconButton-colorPrimary-364"
        customcolor="green"
        data-testid="color-filter-green"
        variant="outer"
      >
        <span
          class="MuiIconButton-label-368"
        >
          <input
            class="PrivateSwitchBase-input-359"
            type="radio"
            value=""
          />
          <div
            class="PrivateRadioButtonIcon-root-372"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-375"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-375 PrivateRadioButtonIcon-layer-373"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </div>
        </span>
        <span
          class="MuiTouchRipple-root-480"
        />
      </span>
      <span
        aria-disabled="false"
        class="MuiButtonBase-root-402 MuiIconButton-root-393 PrivateSwitchBase-root-389 MuiRadio-root-384 MuiRadio-colorPrimary-387 sc-AxjAm kHXFTM MuiIconButton-colorPrimary-397"
        customcolor="yellow"
        data-testid="color-filter-yellow"
        variant="outer"
      >
        <span
          class="MuiIconButton-label-401"
        >
          <input
            class="PrivateSwitchBase-input-392"
            type="radio"
            value=""
          />
          <div
            class="PrivateRadioButtonIcon-root-405"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-408"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-408 PrivateRadioButtonIcon-layer-406"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </div>
        </span>
        <span
          class="MuiTouchRipple-root-490"
        />
      </span>
      <span
        aria-disabled="false"
        class="MuiButtonBase-root-435 MuiIconButton-root-426 PrivateSwitchBase-root-422 MuiRadio-root-417 MuiRadio-colorPrimary-420 sc-AxjAm kEbSPU MuiIconButton-colorPrimary-430"
        customcolor="black"
        data-testid="color-filter-black"
        variant="outer"
      >
        <span
          class="MuiIconButton-label-434"
        >
          <input
            class="PrivateSwitchBase-input-425"
            type="radio"
            value=""
          />
          <div
            class="PrivateRadioButtonIcon-root-438"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-441"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-441 PrivateRadioButtonIcon-layer-439"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
              />
            </svg>
          </div>
        </span>
        <span
          class="MuiTouchRipple-root-500"
        />
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App color filter Test get default color filter with actions  2`] = `
<label
  class="MuiFormControlLabel-root"
  data-testid="color-filter-all"
>
  <span
    aria-disabled="false"
    class="MuiButtonBase-root-240 MuiIconButton-root-231 PrivateSwitchBase-root-227 MuiRadio-root-222 MuiRadio-colorPrimary-225 sc-AxjAm eujBqZ PrivateSwitchBase-checked-228 Mui-checked MuiIconButton-colorPrimary-235"
    customcolor="black"
    variant="outer"
  >
    <span
      class="MuiIconButton-label-239"
    >
      <input
        class="PrivateSwitchBase-input-230"
        type="radio"
        value="All"
      />
      <div
        class="PrivateRadioButtonIcon-root-243 PrivateRadioButtonIcon-checked-245"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-246"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-246 PrivateRadioButtonIcon-layer-244"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
          />
        </svg>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root-450"
    />
  </span>
  <span
    class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
  >
    All
  </span>
</label>
`;
